--- a/swkotor/swkotor.desktop
+++ b/swkotor/swkotor.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Star Wars Knights of the Old Republic
+Name=Star Wars: Knights of the Old Republic
 GenericName=RPG
 GenericName[fr]=JDR
 Encoding=UTF-8
