x-wing-vs-tie-fighter 1.1.4-1 Fixes & improvements

--- a/x-wing-vs-tie-fighter/PKGBUILD
+++ b/x-wing-vs-tie-fighter/PKGBUILD
@@ -20,16 +20,20 @@ source=("${_appname}.desktop"
         "ftp://ftp.lucasarts.com/patches/pc/XVT_3DFX.exe"
         "lib${_appname}.sh"
         "${_appname}.sh"
-        "${_appname}.reg.in"
+        "${_appname}-install.reg.in"
+        "${_appname}-cdrom.reg.in"
         "01-user.conf"
-        "99-base.conf")
+        "99-base.conf"
+        "01-base.sh")
 md5sums=('4c3b046bcbead267eae7a7b2ecdf24db'
          '0d8f2a071d3454b71bed2c9b8af053ab'
-         'c0b2f3a0f2eb94e24e77b2729a4d95dd'
-         'aa678245801cec048da3acc9d06c8048'
+         'acf5751a462e4db05d75642e6fa5bd37'
+         'a41f87b65b042d511419f15311157baa'
          '8c960bc955174e08c6ee8a2397a60d42'
+         'e0a7e985ab2a124adef0a0c6a3febb4f'
          'c1549ac03b636273288afaf4046f3ad0'
-         'cd00a18110819f4e8213d90c5557388f')
+         'cd00a18110819f4e8213d90c5557388f'
+         '17881f72e540348ecd382e1f924d63c4')
 
 build() {
   cd "${srcdir}"
@@ -48,7 +52,7 @@ package() {
 
   for i in  "./amovie/*" "./battle/*" "./bmovie/*" "./combat/*" "./cp*/*" "./frontres/*" "./ivfiles/*"  \
             "./melee/*" "./resource/*" "./sfx/*" "./tourn/*" "./train/*" "./wave/*.*" "./wave/**/*"     \
-            "./*.txt" "./*.fnt" "./*.act" "./*.plo" "./*.abp" "./*.doc" "./*.key" "*.scg"; do
+            "./*.txt" "./*.fnt" "./*.act" "./*.plo" "./*.abp" "./*.doc" "./*.key" "./*.scg"; do
     find . -iwholename "${i}" -exec install -Dm644 "{}" "${baseDir}/{}" \;
   done
 
@@ -65,11 +69,12 @@ package() {
   install -Dm644 top.lst "$baseDir/frontres/top.lst"
 
   # Registry
-  install -Dm644 "${srcdir}/${_appname}.reg.in" "${pkgdir}/usr/share/games/${_appname}/${_appname}.reg.in"
+  install -Dm644 "${srcdir}/${_appname}-install.reg.in" "${pkgdir}/usr/share/games/${_appname}/${_appname}-install.reg.in"
+  install -Dm644 "${srcdir}/${_appname}-cdrom.reg.in" "${pkgdir}/usr/share/games/${_appname}/${_appname}-cdrom.reg.in"
 
   # Modfs
-  install -Dm644 "${srcdir}/01-user.conf" "${pkgdir}/etc/${_appname}.d/01-user.conf"
-  install -Dm644 "${srcdir}/99-base.conf" "${pkgdir}/etc/${_appname}.d/99-base.conf"
+  install -Dm644 "${srcdir}/01-user.conf" "${pkgdir}/etc/${_appname}/branches.d/01-user.conf"
+  install -Dm644 "${srcdir}/99-base.conf" "${pkgdir}/etc/${_appname}/branches.d/99-base.conf"
 
   # .desktop
   install -Dm644 "${srcdir}/${_appname}.desktop" "${pkgdir}/usr/share/applications/${_appname}.desktop"
@@ -78,6 +83,7 @@ package() {
   install -Dm644 "${srcdir}/${_appname}_1_32x32x8.png" "${pkgdir}/usr/share/pixmaps/${_appname}.png"
 
   # Shell scripts
+  install -Dm644 "${srcdir}/01-base.sh" "${pkgdir}/etc/${_appname}/hooks.d/01-base.sh"
   install -Dm644 "${srcdir}/lib${_appname}.sh" "${pkgdir}/usr/lib/lib${_appname}.sh"
   install -Dm755 "${srcdir}/${_appname}.sh" "${pkgdir}/usr/bin/${_appname}"
 }
